# gtrends-bayes

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: ingest.yaml  model.yaml  predictors.yaml  targets.yaml
data/: README.md
docs/: RESULTS.md
docs/v4/: BOOTSTRAP.md  README.md  USAGE.md  data_README.md
docs/v5/: BOOTSTRAP.md  README.md  USAGE.md  data_README.md
notebooks/: 03_bsts_smoke_test.ipynb  04_hy_forecast_v1.ipynb  05_ig_forecast_v1.ipynb  06_hy_vs_ig_comparison.ipynb  07_backtest_v1.ipynb  08_data_preview_v1.ipynb  08_horizon_sweep.ipynb  09_trends_risk_index.ipynb  10_lag_revision.ipynb  11_v21_hygiene.ipynb  12_v3_forecast_quality.ipynb  13_risk_index_v3.ipynb  14_v5_presentation_visuals.ipynb  _helpers.py
scripts/: build_data_sideband.py  build_notebooks_v3.py  build_v4_bundle.py  build_v5_report.py  evaluate_risk_index.py  evaluate_risk_index_v3.py  example_forecast.py  fit_bsts.py  freeze_model_v4.py  horizon_sweep.py  horizon_sweep_v3.py  oas_overlay_v3.py  publish_risk_index_v3.py  pull_oas.py  pull_targets.py  pull_trends.py  pull_trends_daily.py  recalibrate_v3.py  run_preprocessing.py  validate_daily_vs_weekly.py  verify_data.py
src/gtrends_bayes/: __init__.py  config.py  logging.py
src/gtrends_bayes/backtest/: __init__.py  metrics.py  recalibrate.py  walk_forward.py
src/gtrends_bayes/data/: __init__.py  cache.py  chunks.py  chunks_daily.py  financial.py  loader.py  oas.py  stitch.py  trends_client.py
src/gtrends_bayes/features/: __init__.py  groups.py  library.py  trends_risk_index.py
src/gtrends_bayes/inference/: __init__.py  __main__.py  cli.py  forecast.py  load.py  preprocess.py
src/gtrends_bayes/models/: __init__.py  baseline.py  bsts.py  classifier.py  posterior.py  stacked_residual.py
src/gtrends_bayes/models/bsts_r/: fit_bsts.R  helpers.R
src/gtrends_bayes/preprocessing/: __init__.py  bias_removal.py  breaks.py  multi_sample.py  pipeline.py  seasonality.py  target_transform.py
src/gtrends_bayes/viz/: __init__.py  components.py  inclusion.py  trends.py
tests/: conftest.py  test_baselines.py  test_bias_removal.py  test_breaks.py  test_bsts_smoke.py  test_chunks_and_stitch.py  test_chunks_daily.py  test_classifier.py  test_data_layer.py  test_features_library.py  test_groups.py  test_horizon_sweep.py  test_inference.py  test_lag_policy.py  test_loader.py  test_metrics.py  test_metrics_v2.py  test_multi_sample.py  test_oas.py  test_pipeline.py  test_posterior.py  test_pull_targets.py  test_recalibrate.py  test_seasonality.py  test_stacked_residual.py  test_target_transform.py  test_trends_risk_index.py  test_walk_forward.py
