[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtrends-bayes"
version = "0.1.0.dev0"
description = "Bayesian Structural Time Series forecasting of HY and IG corporate spreads using Google Trends predictors."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Cesare Bavaresco" }]
license = { text = "Proprietary" }

dependencies = [
    # Trends + data
    "pytrends>=4.9.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyarrow>=16",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "fredapi>=0.5",
    "yfinance>=0.2.40",

    # Modeling: R bridge (canonical bsts) + diagnostics
    "rpy2>=3.5",
    "arviz>=0.18",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.108",
    "black>=24.4",
    "ruff>=0.5",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:pytrends.*",
    "ignore::FutureWarning:yfinance.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["src/gtrends_bayes"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
